<resources>
    <string name="login">Đăng Nhập</string>
    <string name="hintPassword">Password</string>
    <string name="hintUsername">Username</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="text_home">Trang Chủ</string>
    <string name="text_profile">Hồ sơ</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_change_password">Đổi Mật Khẩu</string>
    <string name="doi_mk">Đổi mật khẩu</string>
    <string name="m_t_kh_u_hi_n_t_i">Mật khẩu hiện tại...</string>
    <string name="m_t_kh_u_m_i">Mật khẩu mới...</string>
    <string name="i_m_t_kh_u">Đổi mật khẩu</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu...</string>
    <string name="quen_mk">Quên mật khẩu</string>
    <string name="nh_p_email">Nhập Email</string>
    <string name="g_i">Gửi</string>
    <string name="to_n">Toán</string>
    <string name="_10_000">10 000</string>
    <string name="x3">x3</string>
    <string name="nh_n">Đã nhận</string>
    <string name="h_y">Hủy</string>
    <string name="giao_ti_n">Giao tiền</string>
    <string name="da_giao_tien">Đã giao tiền</string>
    <string name="tr_h_ng">Đã trả hàng</string>
    <string name="c_n_giao">Cần giao</string>
    <string name="a_ch">Địa chỉ</string>
    <string name="t_n_ng_i_nh_n">Tên người nhận</string>
    <string name="m_n_h_ng">Mã đơn hàng</string>
    <string name="l_do_th_t_b_i">Lý do thất bại</string>
    <string name="chitiet">Chi tiết đơn hàng</string>
    <string name="nguy_n_v_n_t_o">Nguyễn Văn Tèo</string>
    <string name="_0923272802">0923272802</string>
    <string name="_123_tr_ng_th_th_c_tp_hcm">123,Trường Thọ,Thủ Đức,TP.HCM</string>
    <string name="i_n_tho_i">Điện thoại</string>
    <string name="giao_h_ng">Giao hàng</string>
    <string name="t_ng_ti_n_1100000_vnd">Tổng Tiền: 1100000 VND</string>
    <string name="ti_n_gi_m_1100000_vnd">Tiền giảm: 1100000 VND</string>
    <string name="ti_n_thu_1100000_vnd">Tiền thu: 1100000 VND</string>
    <string name="th_t_b_i">Thất bại</string>
    <string name="th_nh_c_ng">Thành công</string>
    <string name="cangiao">Đơn hàng cần giao</string>
    <string name="dagiao">Đơn hàng đã giao</string>
    <string name="dahuy">Đơn hàng đã hủy</string>
    <string name="danggiao">Đơn hàng đang giao</string>
    <string name="shipper_a">Shipper A</string>
    <string name="ch_nh_s_a">Chỉnh sửa</string>
    <string name="t_i_kho_n">Tài khoản</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu?</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="khachhuy">Khách hủy</string>
    <string name="kh_ch_h_ng_mu_n_h_y_n_h_ng">Khách hàng muốn hủy đơn hàng</string>
    <string name="kh_ch_h_ng_t_tr_ng_n_h_ng">Khách hàng đặt trùng đơn hàng</string>
    <string name="khong_lien_lai_duoc">Không liên lạc được</string>
    <string name="ng_a_ch_kh_ng_c_ng_i_nh_n">Đúng địa chỉ không có người nhận</string>
    <string name="a_ch_kh_ng_y_kh_ng_ch_nh_x_c_kh_ng_t_n_t_i">Địa chỉ không đầy đủ,không chính xác,không tồn tại</string>
    <string name="ly_do_that_bai">Lý do thất bại</string>
    <string name="_214w4364ds">214W4364DS</string>
    <string name="kh_ng_li_n_l_c_c">Không liên lạc được</string>
    <string name="kh_ch_h_y">Khách hủy</string>
    <string name="thay_i_th_ng_tin">Thay đổi thông tin</string>
    <string name="thay_doi_thong_tin">Lý do thay đổi thông tin</string>
    <string name="kh_ch_h_ng_y_u_c_u_thay_i_ng_y_gi">Khách hàng yêu cầu thay đổi ngày/giờ</string>
    <string name="kh_ch_h_ng_y_u_c_u_thay_i_a_i_m_giao_h_ng">Khách hàng yêu cầu thay đổi địa điểm giao hàng</string>
    <string name="quan_ly_tai_khoan">Quản lý tài khoản</string>
    <string name="h_v_t_n">Họ và tên:</string>
    <string name="ng_y_sinh">Ngày sinh:</string>
    <string name="s_i_n_tho_i">Số điện thoại:</string>
    <string name="id">ID:</string>
    <string name="l_ng_cb">Lương CB:</string>
    <string name="_1_1_2000">1/1/2000</string>
    <string name="email">Email:</string>
    <string name="sua_ho_so">Sửa hồ sơ</string>
    <string name="l_u">Lưu</string>
    <string name="giao">Đã giao</string>
    <string name="h_y_">Đã hủy</string>
    <string name="ly_do_that_bai_xn">Xác nhận lý do thất bại</string>
    <string name="x_c_nh_n">Xác Nhận</string>
    <string name="close">Đóng</string>
    <string name="field_empty">Không được để trống trường này!</string>
    <string name="login_failed">Sai tài khoản hoặc mật khẩu!</string>
    <string name="send_email_reset_success">Gủi email đặt lại mật khẩu thành công!</string>
    <string name="send_email_reset_failed">Gửi email đặt lại mật khẩu không thành công!</string>
    <string name="re_pass_failed">Mật khẩu không khớp!</string>
    <string name="change_password_success">Đổi mật khẩu thành công!</string>
    <string name="change_password_failed">Đổi mật khẩu không thành công!</string>
    <string name="pass_failed">Mật khẩu hiện tại không đúng!</string>
</resources>