<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/thay_doi_thong_tin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnTTNG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kh_ch_h_ng_y_u_c_u_thay_i_ng_y_gi" />

        <Button
            android:id="@+id/btnTTDD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kh_ch_h_ng_y_u_c_u_thay_i_a_i_m_giao_h_ng" />
    </LinearLayout>
</LinearLayout>