<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screen.ForgetPass">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/quen_mk" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp">

        <EditText
            android:id="@+id/txtmailFogotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nh_p_email"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnGuiMail"
            android:layout_width="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40"
            android:textSize="18sp"
            android:background="@drawable/bg_conner_button"
            android:text="@string/g_i" />
    </LinearLayout>

</LinearLayout>