<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screen.Account">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/quan_ly_tai_khoan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/h_v_t_n"
            android:paddingStart="10dp"
            android:gravity="start|center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHoVaTenQLTK"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center|right"
            android:minHeight="48dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:text="@string/s_i_n_tho_i"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="start|center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            android:paddingStart="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSoDienThoaiQLTK"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center|right"
            android:minHeight="48dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/ng_y_sinh"
            android:paddingStart="10dp"
            android:gravity="start|center"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNgaySinhQLTK"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center|right"
            android:minHeight="48dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/id"
            android:gravity="start|center"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center|right"
            android:minHeight="48dp"
            android:paddingEnd="20dp"
            android:text="@string/_1_1_2000"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/email"
            android:gravity="start|center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            android:paddingStart="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtemail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center|right"
            android:minHeight="48dp"
            android:paddingEnd="20dp"
            android:text="@string/_1_1_2000"
            android:textColor="@color/black"
            android:textSize="@dimen/_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/l_ng_cb"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:textSize="@dimen/_16"
            android:minHeight="48dp"
            android:gravity="start|center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtluongcb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center|right"
            android:minHeight="48dp"
            android:paddingEnd="20dp"
            android:text="@string/_1_1_2000"
            android:textColor="@color/black"
            android:textSize="@dimen/_16"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>